# ornl-hribf-daq-and-analysis

./: .gitignore  CMakeLists.txt  Makefile  README.md  acq2
Dacq/: Makefile  acq_run  acq_run.c  acq_run.make  aux.set  caenr  caenr.f  caenr.make  caenw.f  caenw.make  cam_fast.for  camerr.f  camlist.c  cdiff.c  cnaf  cnaf.c  cnaf.hlp  cnaf.list  cnaf.make  docnaf  docnaf.c  docnaf.make  femsg-stdout.c  femsg-stdout.make  femsg.c  femsg.c.original  femsg.make  fifo  fifo.make  for_acq_ctrl.for  ipberr.make  ipcmon.c  ipcmon.make  joined-Makefile  lf_setup  lf_setup.f  lf_setup.make  linux.pac  logger.make  m_setup  (+23 more)
Ddoc/: VMEsys.doc.oct02  acqsetup.doc.dec02a  alphahard.doc  countd.doc  hhirf.pro.jun94  install-all  mcsq.pro.jun94  modu_setup.doc  modu_setup.doc.oct02  moredrs.doc  pacmanII.doc  pacmanII.doc.oct02  rmsigc.doc  rmslib.doc  trigger.ps  txxps.c  txxps.c.oct02  txxps.c.oct02a  txxps.c.oct98  txxps.ps  viewdoc.oct02
Detc/: VMECPUS  daq-hribf
Dlan/: en_open.c  en_read.c  en_tmo.c  en_write.c  hislist.c  listen  orph_pf.h  orph_pf.make  pcap-int.h  pktlist.c  setmulti.make  sock.c  test-vmedII-2  vmecpus  vmecpus.make  vmed.c  vmed.h  vmed.make  vmedII-debug  vmedII-v2.make  xxx.xxx
Dscad/: mcsqr.bak  scad  scad.rul  scadmsg.f  scadruts.rul
Dscat/: Makefile  compum.f  norman.f  scatcom.f  setpar.f  timekeep.f
Dscop/: scop  scop.doc  scopruts.for  tstruts.f
Dvme/: Acq_Params.h  Acq_Params.h.nov03  VMEacq.c  VMEacq.make  VMEskel.c  VMEterm  acq_ctl.h  acq_ctl.h.jul02  acq_run  acq_run.c  bios.c  caen.h  caen_raw.c  caen_read.c  caen_set.make  caen_test.c  caen_test.make  caenr  caenw  caenw.f  cleanall  cleanvme  cnaf.h.jul02  cnafxx.make  combine.c  devchk.c  devices.h  drsvme.h  f.asm  fastxx.make  initvme  kill_acq.c  kill_acq.make  kt  kt.make  l68  lan.h  lan_str60.run  lance.c  lance.run  (+64 more)
Dwks/: acq_log.c  acq_priority  acq_priority.c  acq_tape_ctrl.c  acqcleanup  acqipc.c  acqlib.h  cdiff.c  datamon.c  datamon.make  dmon  (+23 more)
(+2085 files in other folders)
